# text_message_synthesizer-

./: .cursorignore  .env.example  .gitignore  .prettierrc  CONTRIBUTING.md  README.md  eslint.config.mjs  knip.json  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  ruff.toml  tsconfig.json  vitest.config.ts
docs/: CLEANUP_PLAN.md  MASTER_SYSTEM_GUIDE.md  PERSONALITY_AND_ARC_SYSTEM.md  QUALITY_GATE_SPEC.md  README.md  SYSTEM_OVERVIEW.md
messageviewer/: __init__.py  models.py
source/: __init__.py  ai_assist.py  app.py  conversation.py  events.py  generation_pipeline.py  generator.py  llm_client.py  llm_provider.py  log_config.py  models.py  persistence.py  prompt_constants.py  prompt_renderer.py  prompts.py  quality_checks.py  quality_fix.py  quality_models.py  rate_limit.py  repair.py  skeleton.py  spam.py  validation.py
source/prompt_templates/: batch_user.j2  direct_system.j2  group_system.j2  personality_arc.j2
source/prompt_templates/examples/: direct_example_1.j2  direct_example_2.j2  group_example_1.j2  group_example_2.j2
source/static/: app.js  style.css
source/static/js/: api.js  contacts.js  devices.js  events.js  (+14 more)
source/templates/: index.html
tests/: conftest.py  test_ai_assist_core.py  test_ai_models.py  test_app_endpoints.py  test_generator_core.py  test_generator_helpers.py  test_integration.py  test_llm_client.py  test_llm_provider.py  test_log_config.py  test_models_migration.py  test_persistence.py  test_prompt_renderer.py  test_quality_checks.py  test_rate_limit.py  test_repair.py  test_scenario_list.py  test_spam.py
(+24 files in other folders)
